--- a/src/css/main.css
+++ b/src/css/main.css
@@ -92,15 +92,18 @@ input[type=submit]:hover {
 }
 
 /* Add a background color and some padding around the form */
-.container {
+.feedback-container {
     margin-top: 5vh;
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
 }
 
-.feedback {
-    display: none;
+.feedback-comment {
+    margin-top: 2vh;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
 
 .content {
